we can read save directory now!

--- a/src/app.html
+++ b/src/app.html
@@ -10,6 +10,28 @@
 				font-family: EasVHS;
 				src: url("/EasVHS.ttf");
 			}
+			
+			@font-face {
+				font-family: Pixeled;
+				src: url("/Pixel12x10-v1.1.0.ttf");
+			}
+			
+			@font-face {
+				font-family: PixelOperator;
+				src: url("/PixelOperator.ttf");
+			}
+			
+			
+			@font-face {
+				font-family: PressStart2P;
+				src: url("/PressStart2P.ttf");
+			}
+			
+			
+			@font-face {
+				font-family: W95FA;
+				src: url("/W95FA.otf");
+			}
 
 			@font-face {
 				font-family: Retron2000;
